emartapp/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
          app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: akhilmylaram/emartapp:emartapp-api
          ports:
            - name: api-port
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
  selector:
    app: api
