emartapp/client_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-container
          image: akhilmylaram/emartapp:emartapp-client
          ports:
            - name: client-ports
              containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
  type: ClusterIP
  selector:
    app: client
