emartapp/webapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
          app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi-container
          image: akhilmylaram/emartapp:emartapp-webapi
          ports:
            - name: webapi-port
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  type: ClusterIP
  selector:
    app: webapi
